--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,8 +33,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+
     kotlinOptions {
         jvmTarget = '1.8'
+        languageVersion = "1.7"
     }
 
     sourceSets {
@@ -46,7 +48,7 @@ android {
         applicationId "com.example.ulearning_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         multiDexEnabled true
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
@@ -68,5 +70,8 @@ flutter {
 
 dependencies {
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.android.gms:play-services-measurement-api:21.5.0'
     implementation(platform("com.google.firebase:firebase-bom:32.6.0"))
 }
+
